@@ -84,7 +84,7 @@ public class ISOBitMap extends ISOComponent implements Cloneable {
      * @return Object representing this field number
      */
     public Object getKey() {
-        return new Integer(fieldNumber);
+        return Integer.valueOf(fieldNumber);
     }
     /**
      * @return Object representing this field value
